force-app/main/default/objects/CodeScan_User__c/CodeScan_User__c.object-meta.xml
<CustomObject>
    <label>Cloud Member</label>
    <nameField>
        <label>CodeScan  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cloud Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>