force-app/main/default/objects/CodeScan_User__c/fields/Access_Blocked_on_Lead__c.field-meta.xml
<CustomField>
    <fullName>Access_Blocked_on_Lead__c</fullName>
    <formula>Lead__r.Access_Blocked__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Access Blocked on Lead</label>
    <type>Checkbox</type>
</CustomField>