force-app/main/default/objects/CodeScan_User__c/fields/Billing_Status__c.field-meta.xml
<CustomField>
    <fullName>Billing_Status__c</fullName>
    <formula>Organization__r.Billing_Status__c</formula>
    <label>Billing Status</label>
    <type>Text</type>
</CustomField>