force-app/main/default/objects/CodeScan_User__c/fields/Email_Domain__c.field-meta.xml
<CustomField>
    <fullName>Email_Domain__c</fullName>
    <formula>SUBSTITUTE(Email__c, LEFT(Email__c, FIND(&quot;@&quot;, Email__c)), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Domain</label>
    <type>Text</type>
</CustomField>