force-app/main/default/objects/CodeScan_User__c/fields/LoginCount__c.field-meta.xml
<CustomField>
    <fullName>LoginCount__c</fullName>
    <label>Login Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>