force-app/main/default/objects/CodeScan_User__c/fields/Organization__c.field-meta.xml
<CustomField>
    <fullName>Organization__c</fullName>
    <label>CodeScan Organization</label>
    <referenceTo>CodeScan_Organization__c</referenceTo>
    <relationshipName>CodeScan_Users</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>