force-app/main/default/objects/CodeScan_User__c/fields/Organization_Key__c.field-meta.xml
<CustomField>
    <fullName>Organization_Key__c</fullName>
    <formula>Organization__r.Key__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Organization Key</label>
    <type>Text</type>
</CustomField>