force-app/main/default/objects/CodeScan_User__c/fields/Roles__c.field-meta.xml
<CustomField>
    <fullName>Roles__c</fullName>
    <label>Roles</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>provisioning</fullName>
            </value>
            <value>
                <fullName>scan</fullName>
            </value>
            <value>
                <fullName>admin</fullName>
            </value>
            <value>
                <fullName>gateadmin</fullName>
            </value>
            <value>
                <fullName>profileadmin</fullName>
            </value>
            <value>
                <fullName>issueadmin</fullName>
            </value>
            <value>
                <fullName>codeviewer</fullName>
            </value>
            <value>
                <fullName>user</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>