force-app/main/default/objects/CodeScan_User__c/fields/Trial_Ends__c.field-meta.xml
<CustomField>
    <fullName>Trial_Ends__c</fullName>
    <formula>Organization__r.Trial_Ends__c</formula>
    <label>Trial Ends</label>
    <type>DateTime</type>
</CustomField>