force-app/main/default/objects/CodeScan_User__c/listViews/Cloud_Members_to_Filter.listView-meta.xml
<ListView>
    <fullName>Cloud_Members_to_Filter</fullName>
    <columns>NAME</columns>
    <columns>Email__c</columns>
    <columns>Email_Domain__c</columns>
    <columns>LastLogin__c</columns>
    <columns>LoginCount__c</columns>
    <columns>Organization_Name__c</columns>
    <columns>Organization_Key__c</columns>
    <columns>Company__c</columns>
    <columns>Organization__c</columns>
    <columns>Trial_Ends__c</columns>
    <columns>Billing_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Email_Domain__c</field>
        <operation>contains</operation>
        <value>abbvie</value>
    </filters>
    <label>Cloud Members to Filter</label>
</ListView>